--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -17,6 +17,7 @@
       "docs/*",
       "coverage/*",
       "jest.config.js",
-      "prettier.config.js"
+      "prettier.config.js",
+      "ormconfig.js"
    ]
 }
