--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.3",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.43"
+    "typeorm": "^0.2.43",
+    "winston": "^3.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
