--- a/api/.devcontainer/devcontainer.json
+++ b/api/.devcontainer/devcontainer.json
@@ -50,6 +50,5 @@
 	"postCreateCommand": "yarn dev",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "hubvet",
-  "updateRemoteUserUID": true
+	"remoteUser": "node",
 }
